Fixed answers sometimes failing to be scored due to whitespace.
- Fixed answers sometimes failing to be scored due to whitespace.
- Added tooltip content.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -788,7 +788,7 @@ b {
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     text-align: center;
-    padding: 12px 0;
+    padding: 12px;
     border-radius: 3px;
 
     position: absolute;
